[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/MultiplayerDemo/icon.png" type="Texture" id=1]
[ext_resource path="res://src/MultiplayerDemo/PlayerSprite.gd" type="Script" id=2]
[ext_resource path="res://src/MultiplayerDemo/PlayerProfile.tscn" type="PackedScene" id=3]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel_random = 0.14
angle = 45.0
angle_random = 1.0
scale = 0.02
scale_random = 0.01

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[node name="PlayerSprite" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 32
lifetime = 3.0
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -40, -40, 80, 80 )

[node name="PlayerProfile" parent="." instance=ExtResource( 3 )]
autoload_image = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="image" from="PlayerProfile" to="." method="_on_PlayerProfile_image"]
